新增”规程优化“模型方法